# qsa

./: .gitignore  ALPConstants.m  ALPConstants.mat  CMakeLists.txt  Copy_of_generateLUT.m  DMD.m  DMDpattern.m  DMDtest.m  LUT.mat  README.md  alpV42.m  generateLUT.m  main.py  main1.py  main2.py  patternTest.m  requirements.txt
ALP-4.2/ALP basic GUI/Samples/: Sample1 SXGA+.vas  Sample1 XGA.vas  Sample2 SXGA+.vas  Sample2 XGA.vas
ALP-4.2/ALP basic GUI/Samples 1080p/: Sample1 1080p.vas  Sample2 1080p.vas
ALP-4.2/ALP basic GUI/x64/: AlpBasic.chm
ALP-4.2/ALP-4.2 basic API/Samples/CPP ConsoleSample ALP basic/: CPP ConsoleSample ALP basic - VS2019.sln  CPP ConsoleSample ALP basic - VS2019.vcxproj  CPP ConsoleSample ALP basic.cpp  CPP ConsoleSample ALP basic.sln  CPP ConsoleSample ALP basic.vcxproj  CPP ConsoleSample ALP basic.vcxproj.filters  CPP ConsoleSample ALP basic8.sln  CPP ConsoleSample ALP basic8.vcproj  ReadMe.txt
ALP-4.2/ALP-4.2 basic API/Samples/LabVIEW ALP-4.2 basic/: ALP basic DLL Demo.vi  vi.txt
ALP-4.2/ALP-4.2 basic API/Samples/VB.NET ALP basic/: ALP basic Import.vb  ALP basic Test.Designer.vb  ALP basic Test.vb  AlpDllFileName.vb  VB10.NET Sample ALP basic.sln  VB10.NET Sample ALP basic.vbproj  VB8.NET Sample ALP basic.sln  VB8.NET Sample ALP basic.vbproj
ALP-4.2/ALP-4.2 basic API/x64/: alpV42basic.lib
ALP-4.2/ALP-4.2 high-speed API/Samples/ALP LED API Sample Multi-Color/: ALP LED API Sample Multi-Color - VS2019.sln  ALP LED API Sample Multi-Color - VS2019.vcxproj
ALP-4.2/ALP-4.2 high-speed API/Samples/ALP LED API Sample Single-Color/: ALP LED API Sample Single-Color.cpp
ALP-4.2/ALP-4.2 high-speed API/Samples/ALP high-speed VB2005/: AlpImport.vb  AlpTest.Designer.vb  AlpTest.vb  VB2005Sample.sln  VB2005Sample.vbproj
ALP-4.2/ALP-4.2 high-speed API/Samples/ALP_CSharp_DotNet/: ALP_CSharp_DotNet.csproj  ALP_CSharp_DotNet.sln  AlpImport.cs
ALP-4.2/ALP-4.2 high-speed API/Samples/Alp42Sample/: AlpSample - VS2019.sln  AlpSample - VS2019.vcxproj
ALP-4.2/ALP-4.2 high-speed API/Samples/BlackWhiteSample/: BlackWhiteSample - VS2019.sln  BlackWhiteSample - VS2019.vcxproj
alp42/: __init__.py  alp42.py  alp_exceptions.py
camera/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  __init__.py  camera_bind.cpp  main.cpp
qsa/: CMakeLists.txt  main.cpp
(+6 files in other folders)
